# rad_pipeline

./: Dockerfile  LICENSE  README.md  environment.yml  preclinical_radiomics_quickstart.ipynb  pyproject.toml  requirements.txt
data/MR/Mouse_01/: MR_Volume.nii
data/MR/Mouse_01/rois/: Hippocampal_Region_Left.nii  Hippocampal_Region_Right.nii
src/analysis/: pca.py
src/features/: radiomics.py  radiomics_pipeline.py
src/io/: dicom_slices.py  dose_conversion.py
src/segmentation/: atlas_regions_nifti.py  mr_dose.py
